# arcana

./: .gitignore  Arcana.toml  COPYING  Cargo.toml  Dockerfile  README.md  README.tpl  cfg.json
.github/workflows/: badge.yml  check-docs.yml  check-platforms.yml  check-targets.yml  check-toolchains.yml  fast-pr-check.yml  lints.yml  security.yml
blocks/: Cargo.toml
blocks/src/: main.rs
editor/: Cargo.toml
editor/src/: main.rs  project.rs
engine/: Cargo.toml
engine-dyn/: Cargo.toml
engine-dyn/src/: lib.rs
engine/src/: camera.rs  cfg.rs  clocks.rs  command.rs  control.rs  debug.rs  direction.rs  event.rs  fps.rs  funnel.rs  game.rs  lib.rs  lifespan.rs  model.rs  physics2.rs  physics3.rs  prelude.rs  rect.rs  resources.rs  scene.rs  scoped_allocator.rs  scoped_vec_iter.rs  system.rs  task.rs  unfold.rs  viewport.rs  window.rs
engine/src/assets/: cache.rs  image.rs  mesh.rs  mod.rs  model.rs  texture.rs  treasury.rs
engine/src/assets/import/: aseprite.rs  copy.rs  image.rs  mod.rs  sprite_sheet.rs  tiles.rs
engine/src/assets/import/font/: mod.rs
engine/src/assets/import/gltf/: animation.rs  collider.rs  material.rs  mesh.rs  mod.rs  primitive.rs  sampler.rs  skin.rs
engine/src/camera/: d2.rs  d3.rs  mod.rs
engine/src/egui/: funnel.rs  mod.rs  res.rs
engine/src/graphics/: format.rs  material.rs  mesh.rs  mod.rs  node.rs  sprite_sheet.rs  target.rs  texture.rs  vertex.rs
engine/src/graphics/mesh/: asset.rs
engine/src/graphics/renderer/: basic.rs  basic.wgsl  basic_skelly.wgsl  egui.frag  egui.rs  egui.vert  mod.rs  sigils.rs  simple.rs  sprite.frag  sprite.rs  sprite.vert  sprite.vert.spv  vcolor.rs  vcolor.wgsl
engine/src/graphics/upload/: mod.rs  rgb2rgba.comp  rgb2rgba.comp.spv  rgb2rgba.rs  rgb2rgba.wgsl
engine/src/sprite/: anim.rs  graph.rs  mod.rs
engine/src/tiles/: map.rs  tile.rs
examples/: cfg.json  unfold.rs
examples/assets/: Treasury.toml  tank.json  tank.png.treasure  tanks-map.json  tanks-map1.json  tanks-map2.json  tanks-map3.json  tanks-tiles.json  test.gltf
examples/assets/.treasury/: 42e2670c-33c3-4b4d-abe2-4ce99dd3a64c  5c1fe447-bc12-496a-b713-9cf3a811b4d1  5c6154dc-a98b-431d-8cf7-3627f9e5e6e0  8a8178ef-9ab4-4206-a9db-89107d10cb24  9054d348-31ad-428c-9a58-7bbc8a5907da  98417a15-066a-4768-9447-b1345aed868f  a6ba2179-d4d5-4a86-bd33-e82e97bb30aa  b3f60902-78b8-443f-b3a0-8766c8a52027  b4f3f88e-0fcf-4f51-8b07-a3ae5db1afbb  c20c25d3-9d7b-4b66-833c-4541bf5263d9  d5b2c243-bfff-4eb3-b10f-615faf210574  manifest.json
examples/blocks/: Cargo.toml
examples/blocks/src/: main.rs
examples/bunnymark/: Cargo.toml
examples/bunnymark/src/: main.rs
examples/edit/: Cargo.toml
examples/edit/src/: main.rs
examples/gltf-test/: Cargo.toml
examples/gltf-test/src/: main.rs
examples/moonwalk/: Cargo.toml  cfg.json
examples/moonwalk/src/: main.rs
examples/rays/: Cargo.toml
examples/rays/src/: main.rs  raster.rs
examples/sponza/: Cargo.toml
examples/sponza/src/: main.rs
examples/tanks/: Cargo.toml  expand.rs  tank-1.json  tileset.json
examples/tanks/client/: Cargo.toml
examples/tanks/client/src/: main.rs
examples/tanks/server/: Cargo.toml  cfg.json
examples/tanks/server/src/: main.rs
examples/tanks/src/: expanded.rs  lib.rs  main.rs  tank.rs  tiles.rs
examples/unfold/: Cargo.toml
examples/unfold/src/: main.rs
import/: Cargo.toml
import/src/: aseprite.rs  copy.rs  image.rs  lib.rs  material.rs  sampler.rs  sprite_sheet.rs  tiles.rs
import/src/_gltf/: animation.rs  collider.rs  mesh.rs  mod.rs  renderable.rs  scene.rs
import/src/gltf/: collider.rs  material.rs  mesh.rs  mod.rs  primitive.rs  skin.rs
importer/: Cargo.toml
importer/src/: image.rs  lib.rs  magic.rs
license/: APACHE  MIT
mesh-file/: Cargo.toml
mesh-file/src/: lib.rs
physics/: Cargo.toml
physics/src/: lib.rs  physics2.rs  physics3.rs
proc/: Cargo.toml
proc/src/: lib.rs  time.rs  unfold.rs
sponza/: Cargo.toml
src/: anim.rs  bitset.rs  camera.rs  cfg.rs  clocks.rs  command.rs  control.rs  debug.rs  event.rs  fps.rs  funnel.rs  game.rs  lib.rs  lifespan.rs  noophash.rs  physics2.rs  physics3.rs  prefab.rs  prelude.rs  rect.rs  resources.rs  scene.rs  scoped_vec_iter.rs  session.rs  system.rs  task.rs  unfold.rs  util.rs  viewport.rs
src/anim/: graph.rs  mod.rs  simple.json  sprite.rs
src/assets/: asset.rs  cache.rs  dataurl.rs  font.rs  format.rs  fs.rs  image.rs  key.rs  loader.rs  material.rs  mod.rs  object.rs  source.rs  sprite_sheet.rs  tiles.rs  treasury.rs
src/assets/gltf/: animation.rs  collider.rs  image.rs  material.rs  mesh.rs  mod.rs  prefab.rs  primitive.rs  renderable.rs  sampler.rs  skin.rs
src/assets/tiles/: map.rs  tile.rs
src/egui/: mod.rs
src/graphics/: basic.wgsl  basic_skelly.wgsl  material.rs  mesh.rs  mod.rs  node.rs  renderer.rs  scale.rs  sprite.rs  texture.rs  vertex.rs
src/graphics/renderer/: basic.rs  basic.wgsl  basic_skelly.wgsl  egui.frag  egui.rs  egui.vert  forward.rs  mod.rs  sigils.frag.spv  sigils.rs  sigils.vert  sigils.vert.spv  simple.rs  sprite.frag  sprite.frag.spv  sprite.rs  sprite.vert  sprite.vert.spv  vcolor.rs
src/net/: client.rs  mapper.rs  mod.rs  nid.rs  serde.rs  server.rs
src/sprite/: anim.rs  character.rs  mod.rs  sprite_sheet.rs
src/tiles/: map.rs  mod.rs  set.rs  tile.rs
store/: Cargo.toml
store/src/: lib.rs
tiles/: Cargo.toml
tiles/src/: draw.rs  lib.rs  map.rs  set.rs  tile.rs
time/: Cargo.toml
time/src/: lib.rs  span.rs  stamp.rs
timespan/: Cargo.toml
timespan/src/: lib.rs
untitled/: Cargo.toml  README.tpl  lizard-man.gltf
untitled/src/: main.rs
