[package]
name = "arcana"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/arcana"
homepage = "https://github.com/zakarumych/arcana"
repository = "https://github.com/zakarumych/arcana"

[features]
asset-reimport = ["goods/fetch-reimport"]

[dependencies]
arcana-time = { version = "0.1", path = "time", features = ["serde"] }
arcana-proc = { version = "0.1", path = "proc" }
arcana-mesh-file = { version = "0.1", path = "mesh-file" }

# Animation
skelly = { version = "0.4", features = ["serde-1"] }

# Windowing
winit = { version = "0.25", features = ["serde"] }
raw-window-handle = "0.3"

# Graphics
sierra = { version = "0.3", features = ["serde-1"], git = "https://github.com/zakarumych/sierra" }
#sierra = { version = "0.3", features = ["serde-1"] }

# Ecs
hecs = "0.6"

# Logging
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"

# Async and networking
futures = "0.3"
flume = "0.10"
tokio = { version = "1.0", features = ["rt", "net", "io-util"] }

# Math
na = { package = "nalgebra", version = "0.28", features = ["serde-serialize"] }
approx = "0.5"
genmesh = { version = "0.6", optional = true }

# Physics
parry2d = "0.6"
parry3d = "0.6"
rapier2d = "0.10"
rapier3d = "0.10"

# Error Handling
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1.0"

# Serialization
percent-encoding = "2.1"
base64 = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ron = "0.6"
bincode = "1.3"

# Asset processing
image = "0.23"
goods = { version = "0.11" }
uuid = { version = "0.8", features = ["serde"] }

# Utility
parking_lot = "0.11"
ahash = { version = "0.7", features = ["compile-time-rng"] }
hashbrown = { version = "0.11" }
bumpalo = { version = "3.6", features = ["collections", "boxed"] }
num_cpus = "1.0"
ordered-float = "2.1"
bytemuck = "1.0"
lazy_static = "1.0"
slab = "0.4"

[workspace]
members = ["import", "examples/blocks", "examples/tanks", "examples/bunnymark", "examples/gltf-test", "examples/sponza"]
