[package]
name = "arcana-import"
version = "0.1.0"
authors = ["Zakarum <zakarumych@ya.ru>"]
edition = "2018"
description = "Asset importer for arcana game engine"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "wasi")'.dependencies]
arcana-time = { version = "0.1", path = "../time", features = ["serde"] }
arcana-mesh-file = { version = "0.1", path = "../mesh-file" }
skelly = { version = "0.5", features = ["serde-1"], git = "https://github.com/zakarumych/skelly.git" }

goods-treasury-import = { version = "0.2" }
goods-treasury-import-ffi = { version = "0.1" }
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde"] }
eyre = "0.6"
gltf = "0.16"
na = { package = "nalgebra", version = "0.29", features = ["serde-serialize"] }
byteorder = "1.4"
tracing = "0.1"
thiserror = "1.0"
bytemuck = "1.0"
bincode = "1.3"
base64 = "0.13"
