[package]
name = "arcana-physics"
version = "0.1.0"
edition = "2021"

[features]

# Enables rapier physics of specific dementionality
2d = ["rapier2d", "parry2d", "arcana/2d"]
3d = ["rapier3d", "parry3d", "arcana/3d"]

default = ["2d", "3d"]


[dependencies]
arcana = { version = "*", path = "../engine" }

# math
approx = "0.5"

# utility
flume = "0.10"
cfg-if = "1.0"

# rapier
parry2d = { version = "0.9", optional = true }
parry3d = { version = "0.9", optional = true }
rapier2d = { version = "0.14", optional = true }
rapier3d = { version = "0.14", optional = true }
