[package]
name = "arcana-proc"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/arcana-proc"
homepage = "https://github.com/arcana-engine/arcana"
repository = "https://github.com/arcana-engine/arcana"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
arcana-time = { version = "0.1", path = "../time" }
