[package]
name = "blocks"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
arcana = { path = "../../engine", features = ["graphics", "2d"], default-features = false }
arcana-physics = { path = "../../physics", features = ["2d"] }
rand = "0.8"
tracing = "0.1"
