[package]
name = "moonlwalk"
version = "0.1.0"
edition = "2018"
authors = ["zaq"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
arcana = { path = "../.." }
goods = { git = "https://github.com/zakarumych/goods" }
color-eyre = "0.5"
hecs = "0.5"
rapier2d = "0.8"
eyre = "0.6"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
na = { package = "nalgebra", version = "0.26" }
tracing = "0.1"
ordered-float = "2.1"
uuid = "0.8"
thiserror = "1.0"
