[package]
name = "moonlwalk"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
arcana = { path = "../.." }
color-eyre = "0.5"
hecs = "0.6"
rapier2d = "0.11"
eyre = "0.6"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
na = { package = "nalgebra", version = "0.29" }
tracing = "0.1"
ordered-float = "2.1"
uuid = "0.8"
thiserror = "1.0"
