[package]
name = "tanks"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[features]
graphics = ["arcana/graphics"]
client = ["arcana/client"]
server = ["arcana/server"]

[dependencies]
alkahest = { version = "0.1", features = ["nightly"] }
arcana = { path = "../..", features = ["physics2d", "treasury"], default-features = false }
goods = { path = "../../../goods" }
color-eyre = "0.5"
eyre = "0.6"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
ordered-float = "2.1"
thiserror = "1.0"
cfg-if = "1.0"
