[package]
name = "tanks"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[features]
graphics = ["arcana/graphics"]
client = []
server = []

[dependencies]
alkahest = { version = "0.1", features = ["nightly"] }
arcana = { path = "../../engine", features = ["physics2d"], default-features = false }
goods = { version = "0.13", git = "https://github.com/arcana-engine/goods" }
eyre = "0.6"
serde = "1.0"
