[package]
name = "unfold"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
arcana = { path = "../../engine", features = ["2d", "visible", "graphics", "treasury-store"] }
tracing = "0.1"
goods = { version = "0.13", git = "https://github.com/arcana-engine/goods" }
