[package]
name = "tanks-client"
version = "0.1.0"
edition = "2018"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tanks = { path = ".." }
arcana = { path = "../../..", features = ["physics2d", "client", "visible"], default-features = false }
color-eyre = "0.5"
eyre = "0.6"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
ordered-float = "2.1"
uuid = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["net"] }