[package]
name = "tanks-client"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tanks = { path = "..", features = ["client", "graphics"] }
arcana = { package = "arcana", path = "../../../engine", features = ["physics2d", "client", "graphics", "asset-pipeline", "with-egui"], default-features = false }
eyre = "0.6"
serde = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["net"] }
