[package]
name = "tanks-server"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tanks = { path = "..", features = ["server"] }
arcana = { path = "../../..", features = ["physics2d", "server"], default-features = false }
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
ordered-float = "2.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["net"] }
alkahest = "0.1"
