[package]
name = "tanks-server"
version = "0.1.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
tanks = { path = "..", features = ["server"] }
arcana = { package = "arcana", path = "../../../engine-dyn", features = ["physics2d", "server", "asset-pipeline"], default-features = false }
eyre = "0.6"
rand = "0.8"
tracing = "0.1"
tokio = { version = "1.0", features = ["net"] }
